Tweak radial-gradient for text-shadow-intro slightly

--- a/src/text-shadow-intro/style.styl
+++ b/src/text-shadow-intro/style.styl
@@ -4,7 +4,7 @@
 
 body
 html
-  background radial-gradient(#dcd7d7 85%, #fff)
+  background radial-gradient(#dcd7d7, #000 200%)
   display flex
   align-items center
   justify-content center
