--- a/src/react-cards/style.styl
+++ b/src/react-cards/style.styl
@@ -10,7 +10,7 @@ body
   justify-content center
   margin 0
   min-height 100vh
-  overflow hidden
+  overflow-x hidden
   padding 0
   width 100vw
 
