Remove stats counter from embers-canvas

--- a/src/embers-canvas/style.styl
+++ b/src/embers-canvas/style.styl
@@ -13,6 +13,9 @@ input
 label
   margin-bottom 30px
 
+  &:last-of-type
+    margin-bottom 0
+
 
 .menu
   position absolute
@@ -28,9 +31,6 @@ label
 
   &--open
     transform translate(0, 0)
-
-  div > canvas:first-of-type
-    display block !important
 
 .icon
   height 60%
