--- a/src/embers-canvas/style.styl
+++ b/src/embers-canvas/style.styl
@@ -6,6 +6,11 @@ body
   font-family 'Arial', sans-serif
   background #111
 
+canvas
+  position fixed
+  height 100vh
+  width 100vw
+
 input
   cursor pointer
   display block
