--- a/src/embers-canvas/dev.pug
+++ b/src/embers-canvas/dev.pug
@@ -10,7 +10,10 @@ canvas
     input(type='range', min="1", max="500", step="1", value="100", id="AMOUNT")
   label
     | Upper Velocity Bounds
-    input(type='range', min="5", max="50", step="1", value="20", id="UPPER_LIMIT")
+    input(type='range', min="1", max="50", step="1", value="20", id="UPPER_LIMIT")
   label
     | Lower Velocity Bounds
-    input(type='range', min="5", max="50", step="1", value="1", id="LOWER_LIMIT")
+    input(type='range', min="1", max="50", step="1", value="1", id="LOWER_LIMIT")
+  label
+    | Blur
+    input(type='range', min="1", max="10", step="1", value="2", id="BLUR")
