--- a/src/embers-canvas/style.styl
+++ b/src/embers-canvas/style.styl
@@ -1,3 +1,6 @@
+:root
+  --blur 2
+
 *
   box-sizing border-box
 
@@ -10,6 +13,7 @@ canvas
   position fixed
   height 100vh
   width 100vw
+  filter blur(calc(var(--blur) * 1px))
 
 input
   cursor pointer
