--- a/src/dont-feel-good/style.styl
+++ b/src/dont-feel-good/style.styl
@@ -30,7 +30,7 @@ body
   &__cell
     --cellWidth calc((calc(var(--width) * -1px)) / var(--columns))
     --cellHeight calc((calc(var(--height) * -1px)) / var(--rows))
-    background url(https://raw.github.com/jh3y/doodles/master/dontfeelgoodbear.svg?sanitize=true)
+    background url(https://jh3y-doodles.netlify.com/dontfeelgoodbear.svg)
     background-size calc(var(--width) * 1px) calc(var(--height) * 1px)
     background-position calc(var(--x) * var(--cellWidth)) calc(var(--y) * var(--cellHeight))
     animation-delay calc(var(--x) * .2s + 1s)
