Updates to footballlll and drifting-bg

--- a/src/drifting-bg/dev.pug
+++ b/src/drifting-bg/dev.pug
@@ -4,4 +4,5 @@
     .bg
       - for (let c = 0; c < 4; c++)
         div
-  .loading-screen__msg Loading...
+  .loading-screen__msg(contenteditable='true') Loading...
+input(type='color', value='#663399')
