--- a/src/drifting-bg/style.styl
+++ b/src/drifting-bg/style.styl
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy')
 *
   box-sizing border-box
+  transition background .25s
 
 
 $color = rebeccapurple
 $delayInc = 0.15
-$duration = .75
+$duration = 1
 $rows = 6
 
 :root
@@ -16,17 +18,28 @@ $rows = 6
   --duration $duration
   --rows $rows
 
+html
+body
+  height 100vh
+  font-family 'Luckiest Guy', cursive
+  overflow hidden
+  position relative
+  width 100vw
 
 .loading-screen
+  position fixed
+  top 0
+  right 0
+  bottom 0
+  left 0
   &__msg
-    position fixed
     bottom 20px
-    right 20px
     color #fafafa
-    z-index 10
     font-size 2.25rem
-    font-family 'Arial', sans-serif
-    font-weight bolder
+    position absolute
+    right 20px
+    transform translate3d(0, 0, 0)
+    z-index 10
 
   &--loading .bg div
     &:nth-child(1)
@@ -37,9 +50,9 @@ $rows = 6
       animation-name drift-right
 
 .bg
-  height calc((100 / var(--rows)) * 1vh)
+  height calc((100 / var(--rows)) * 1%)
   position relative
-  width 100vw
+  width 100%
 
   div
     animation-duration calc(var(--duration) * 1s)
@@ -49,6 +62,7 @@ $rows = 6
     left 0
     position absolute
     top 0
+    transform translate3d(0, 0, 0)
     width 100%
 
     &:nth-child(1)
@@ -67,17 +81,28 @@ $rows = 6
       background var(--bg4)
       z-index 2
 
+input
+  background var(--bg1)
+  border 2px solid white
+  bottom 20px
+  cursor pointer
+  height 44px
+  left 20px
+  position absolute
+  width 44px
+
 
 .bg
   for $bg in (1..$rows)
     &:nth-of-type({$bg}) div
       // At this point, need to consider when the last row would finish animating before the next set
       // For example, delay for round 2 is when the last in row one finishes
-      DELAY_LAPSE_DIVIDER = 5
+      DELAY_LAPSE_DIVIDER = 4
+      ROUND = '((var(--delay) * %s) + (var(--duration) / %s))' % ($rows DELAY_LAPSE_DIVIDER)
       A = '(var(--delay) * %s)' % $bg
-      B = '(((var(--delay) * %s) + (var(--duration) / %s)) + %s)' % ($rows DELAY_LAPSE_DIVIDER A)
-      C = '(%s + (var(--delay) * %s) + (var(--duration) / %s))' % (B $rows DELAY_LAPSE_DIVIDER)
-      D = '(%s + (var(--delay) * %s) + (var(--duration) / %s))' % (C $rows DELAY_LAPSE_DIVIDER)
+      B = '(%s + %s)' % (A ROUND)
+      C = '(%s + %s)' % (B ROUND)
+      D = '(%s + %s)' % (C ROUND)
       delayA = 'calc(%s * 1s)' % A
       delayB = 'calc(%s * 1s)' % B
       delayC = 'calc(%s * 1s)' % C
@@ -88,6 +113,18 @@ $rows = 6
         animation-delay delayB
       &:nth-child(3)
         animation-delay delayC
+
+      // $round = (($delayInc * $rows) + ($duration / DELAY_LAPSE_DIVIDER))
+      // $delayOne = ($delayInc * $bg)
+      // $delayTwo = ($delayOne + $round)
+      // $delayThree = ($delayTwo + $round)
+      // $delayFour = ($delayThree + $round)
+      // &:nth-child(1)
+      //   animation-delay ($delayOne * 1s), ($delayFour * 1s)
+      // &:nth-child(2)
+      //   animation-delay ($delayTwo * 1s)
+      // &:nth-child(3)
+      //   animation-delay ($delayThree * 1s)
 
 
 @keyframes drift-in
