--- a/src/face-tracking-photos/index.pug
+++ b/src/face-tracking-photos/index.pug
@@ -1,6 +1,7 @@
 extends ../../boilerplate/layout.boilerplate.pug
 block content
   include dev.pug
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.9/vue.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/tracking.js/1.1.3/tracking-min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/tracking.js/1.1.3/data/face-min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/tracking.js/1.1.3/data/eye-min.js")
