Start implementing e-signature flow

--- a/src/e-signature/style.styl
+++ b/src/e-signature/style.styl
@@ -2,85 +2,7 @@
   box-sizing border-box
 
 body
-  background #fafafa
-
-.rsizable
-  position relative
-  display inline-block
-  $handleSize = 50px
-  &__handle
-    height $handleSize
-    width $handleSize
-    display inline-block
-    cursor var(--cursor)
-    position absolute
-    transform translate(calc(var(--x, 0) * 1%), calc(var(--y, 0) * 1%))
-
-    &:after
-      background #2eec71
-      border-radius 100%
-      content ''
-      height calc(var(--handleSize, 10) * 1px)
-      left 50%
-      position absolute
-      top 50%
-      transform translate(-50%, -50%)
-      width calc(var(--handleSize, 10) * 1px)
-
-    &--n
-    &--s
-      left 50%
-      margin-left -($handleSize / 2)
-
-    &--n
-      top 0
-
-    &--s
-      bottom 0
-
-    &--e
-    &--w
-      top 50%
-      margin-top -($handleSize / 2)
-
-    &--e
-      right 0
-
-    &--w
-      left 0
-
-    &--ne
-      top 0
-      right 0
-
-    &--se
-      bottom 0
-      right 0
-
-    &--nw
-      top 0
-      left 0
-
-    &--sw
-      bottom 0
-      left 0
-
-    &--nw
-    &--n
-    &--ne
-      --y -50
-
-    &--nw
-    &--w
-    &--sw
-      --x -50
-
-    &--ne
-    &--e
-    &--se
-      --x 50
-
-    &--sw
-    &--s
-    &--se
-      --y 50
+  background linear-gradient(25deg, #4ecdc4, #e4f1fe)
+  min-height 100vh
+  overflow hidden
+  width 100vw
