--- a/src/e-signature/index.pug
+++ b/src/e-signature/index.pug
@@ -10,6 +10,7 @@ html
       include dev.pug
     script(crossorigin, src="https://unpkg.com/react@16.4.0/umd/react.development.js")
     script(crossorigin, src="https://unpkg.com/react-dom@16.4.0/umd/react-dom.development.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js")
     script(src="https://unpkg.com/styled-components/dist/styled-components.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/prop-types/15.6.1/prop-types.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/Faker/3.1.0/faker.js")
