--- a/src/e-signature/style.styl
+++ b/src/e-signature/style.styl
@@ -1,8 +1,14 @@
 *
   box-sizing border-box
-
+html
 body
   background linear-gradient(25deg, #4ecdc4, #e4f1fe)
+  margin 0
   min-height 100vh
-  overflow hidden
+  padding 0
+  font-family 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif
   width 100vw
+  font-size 10px
+
+  @media(min-width 768px)
+    font-size 16px
