--- a/src/e-signature/style.styl
+++ b/src/e-signature/style.styl
@@ -1,7 +1,9 @@
 *
   box-sizing border-box
+
 html
 body
+#app
   background linear-gradient(25deg, #4ecdc4, #e4f1fe)
   margin 0
   min-height 100vh
@@ -12,3 +14,12 @@ body
 
   @media(min-width 768px)
     font-size 16px
+
+#app
+  position fixed
+  top 0
+  left 0
+  height 100vh
+  width 100vw
+  overflow-y scroll
+  -webkit-overflow-scrolling touch
