--- a/src/duotone-filter-css/dev.pug
+++ b/src/duotone-filter-css/dev.pug
@@ -4,11 +4,11 @@
   .duotone
   .chooser.chooser--lighten
     - for (let i = 0; i < colors.length; i++)
-      label.lighten(title='Lighten Tone', class=`${colors[i] === 'transparent' ? 'clear' : ''}`, for=`lighten--${i}`, style=`--bg: ${colors[i]}; --angle: ${(360 / colors.length) * i}`)
+      label.lighten(title=`Lighten w/ ${colors[i]}`, class=`${colors[i] === 'transparent' ? 'clear' : ''}`, for=`lighten--${i}`, style=`--bg: ${colors[i]}; --angle: ${(360 / colors.length) * i}`)
       input(id=`lighten--${i}`, type='radio', value=`${colors[i]}`, name='lighten', style=`--angle: ${(360 / colors.length) * i}`)
   .chooser.chooser--darken
     - for (let i = 0; i < colors.length; i++)
-      label.darken(title='Darken Tone', class=`${colors[i] === 'transparent' ? 'clear' : ''}`, for=`darken--${i}`, style=`--bg: ${colors[i]}; --angle: ${(360 / colors.length) * i}`)
+      label.darken(title=`Darken w/ ${colors[i]}`, class=`${colors[i] === 'transparent' ? 'clear' : ''}`, for=`darken--${i}`, style=`--bg: ${colors[i]}; --angle: ${(360 / colors.length) * i}`)
       input(id=`darken--${i}`, type='radio', value=`${colors[i]}`, name='darken', style=`--angle: ${(360 / colors.length) * i}`)
   svg.indicator(preserveAspectRatio='xMinYMin', viewBox="0 0 24 24")
     path(d="M7,10L12,15L17,10H7Z")
