Start messing with form pseudo elements

--- a/src/cpc-forms/dev.pug
+++ b/src/cpc-forms/dev.pug
@@ -2,7 +2,7 @@
   <h1>Sign Up</h1>
   <div class="signup__field">
     <label for="first_name" class="label">First name</label>
-    <input type="text" name="first_name" id="first_name" class="input-field">
+    <input type="text" name="first_name" id="first_name" class="input-field" required>
   </div>
   <div class="signup__field">
     <label for="last_name" class="label">Last name</label>
