--- a/src/cpc-forms-password-gen/index.pug
+++ b/src/cpc-forms-password-gen/index.pug
@@ -8,5 +8,7 @@ html
   body
     block content
       include dev.pug
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.9/vue.min.js")
+    script(crossorigin, src="https://unpkg.com/react@16.4.0/umd/react.development.js")
+    script(crossorigin, src="https://unpkg.com/react-dom@16.4.0/umd/react-dom.development.js")
+    script(src="https://unpkg.com/styled-components/dist/styled-components.min.js")
     script(src="script.js")
