--- a/src/cpc-forms-password-gen/index.pug
+++ b/src/cpc-forms-password-gen/index.pug
@@ -4,6 +4,8 @@ html
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     title Some cool pen
     meta(name="viewport", content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1.0")
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css')
+    link(rel='stylesheet',href='https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.10/dialog-polyfill.css')
     link(rel='stylesheet', href='style.css')
   body
     block content
@@ -11,4 +13,5 @@ html
     script(crossorigin, src="https://unpkg.com/react@16.4.0/umd/react.development.js")
     script(crossorigin, src="https://unpkg.com/react-dom@16.4.0/umd/react-dom.development.js")
     script(src="https://unpkg.com/styled-components/dist/styled-components.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.10/dialog-polyfill.min.js")
     script(src="script.js")
