--- a/src/cpc-forms-password-gen/style.styl
+++ b/src/cpc-forms-password-gen/style.styl
@@ -29,20 +29,22 @@ h1
   display flex
   align-items center
   justify-content center
+  width 100%
 
 .actions
   display flex
   justify-content flex-end
+  width 100%
 
 .options
   padding 20px 0
   display grid
   grid-template-columns repeat(4, auto)
   grid-template-rows repeat(4, 1fr)
-  width 50%
-  margin 0 auto
+  grid-row-gap 12px
   align-items center
   justify-items center
+  width 200px
 
   label
     text-align right
@@ -64,6 +66,10 @@ h1
 @keyframes bounceIn
   from
     transform translate(-50%, -50%) scale(0)
+
+dialog + .backdrop
+  animation fadeIn .25s
+  background rgba(152, 51, 153, 0.5)
 
 .dialog
   animation bounceIn .25s cubic-bezier(0.175, 0.885, 0.32, 1.275)
@@ -87,6 +93,9 @@ h1
     border-radius 6px
     padding 20px
     overflow hidden
+    display flex
+    flex-direction column
+    align-items center
 
 dialog ~ div
   align-items center
@@ -124,3 +133,90 @@ button
   padding 8px 12px
   min-width 120px
   font-size 14px
+
+.check
+  width 40px
+  height 20px
+  margin-right 4px
+  overflow hidden
+  position relative
+  border-radius 10px
+
+  input
+    width 100%
+    height 100%
+    position absolute
+    z-index 2
+    opacity 0
+
+    &:checked ~ span:nth-of-type(2)
+      transform translate(100%, 0)
+      background dodgerblue
+
+    &:checked ~ span:nth-of-type(1)
+      background lighten(dodgerblue, 75%)
+
+  span
+    border-radius 10px
+    height 20px
+    position absolute
+    top 0
+    left 0
+    transition transform .1s, background .1s
+
+  span:nth-of-type(1)
+    width 40px
+    background lighten(#ccc, 75%)
+
+  span:nth-of-type(2)
+    width 20px
+    background #ccc
+
+
+input[type=range]
+  -webkit-appearance none
+  margin 18px 0
+  width 100%
+  outline 0
+
+  &:focus
+    outline none
+
+  &:focus::-moz-range-track
+    outline 0
+
+  &::-webkit-slider-runnable-track
+    width 100%
+    height 8px
+    cursor pointer
+    animate 0.2s
+    background lighten(dodgerblue, 75%)
+    border-radius 4px
+    outline 0
+
+  &::-moz-range-track
+    width 100%
+    height 8px
+    cursor pointer
+    outline 0
+    animate 0.2s
+    background lighten(dodgerblue, 75%)
+    border-radius 4px
+
+
+  &::-webkit-slider-thumb
+    height 20px
+    width 20px
+    border-radius 100%
+    background dodgerblue
+    cursor pointer
+    -webkit-appearance none
+    margin-top -5px
+
+
+  &::-moz-range-thumb
+    height 20px
+    width 20px
+    border-radius 100%
+    background dodgerblue
+    cursor pointer
