Fix paw positioning for impossible checkbox

--- a/src/impossible-checkbox/style.styl
+++ b/src/impossible-checkbox/style.styl
@@ -63,7 +63,10 @@ body
   &__arm
     background transparent
     transform-origin left
-    transform translate(0, 0) scaleX(1)
+    position absolute
+    top 50%
+    left 50%
+    transform translate(-50%, -50%) scaleX(1)
 
   &__paw
     background #784421
