--- a/src/impossible-checkbox/style.styl
+++ b/src/impossible-checkbox/style.styl
@@ -54,6 +54,7 @@ body
   &__arm-wrap
     background transparent
     position fixed
+    height 30px
     width 90px
     z-index 4
     top 50%
@@ -64,9 +65,11 @@ body
     background transparent
     transform-origin left
     position absolute
+    height 100%
+    width 100%
     top 50%
     left 50%
-    transform translate(-50%, -50%) scaleX(1)
+    transform translate(-35%, -50%) scaleX(1)
 
   &__paw
     background #784421
