Add carving to table

--- a/src/table/style.styl
+++ b/src/table/style.styl
@@ -73,7 +73,13 @@ $width = 300px
       width 100%
 
     th:nth-of-type(2)
-      transform translate3d(0, 0, -25px)
+      align-items center
+      color #ffdddd
+      display flex
+      font-size 1.5rem
+      justify-content center
+      text-shadow 2px 2px black
+      transform translate3d(0, 0, -25px) rotateX(180deg)
 
     th:nth-of-type(3)
     th:nth-of-type(5)
