--- a/src/javascript-debounce-throttle-visualisation/style.styl
+++ b/src/javascript-debounce-throttle-visualisation/style.styl
@@ -2,29 +2,96 @@
 *:after
 *:before
   box-sizing border-box
+  outline-color transparent
+
+::selection
+  background transparent
 
 body
-  background #eee
+  background #3a539b
+  font-family 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif
   margin 0
+  overflow hidden
   padding 0
 
 canvas
-  background #000
-
-@keyframes float
-  0%
-    transform translate(0, 0) scale(0)
-  5%
-    transform translate(5vw, 0) scale(1)
-  95%
-    transform translate(95vw, 0) scale(1)
-  100%
-    transform translate(100vw, 0) scale(0)
-.blob
-  height 50px
-  width 50px
-  background red
-  animation float 60s linear
+  height 100vh
+  width 100vw
   position absolute
-  left 0
-  top 200px
+
+.time
+  border-left 2px dashed #fafafa
+  position absolute
+  color #fafafa
+  font-size 1.25rem
+  padding 1rem 1rem 1rem 1rem
+  right 0
+  top 0
+  bottom 0
+
+.actions
+  color #fafafa
+  position absolute
+  width 100vw
+  display grid
+  grid-template-rows repeat(4, 1fr)
+  padding-left 10px
+  bottom 10vh
+  align-items center
+  justify-content flex-start
+
+.chosen-time
+  color #fafafa
+  font-size 1rem
+  position absolute
+  padding 10px
+  bottom 0
+
+input[type=range]
+  background #3a539b
+  -webkit-appearance none
+  margin 18px 0
+  width 100%
+  outline 0
+
+  &:focus
+    outline none
+
+  &:focus::-moz-range-track
+    outline 0
+
+  &::-webkit-slider-runnable-track
+    width 100%
+    height 8px
+    cursor pointer
+    animate 0.2s
+    background lighten(dodgerblue, 75%)
+    border-radius 4px
+    outline 0
+
+  &::-moz-range-track
+    width 100%
+    height 8px
+    cursor pointer
+    outline 0
+    animate 0.2s
+    background lighten(dodgerblue, 75%)
+    border-radius 4px
+
+
+  &::-webkit-slider-thumb
+    height 20px
+    width 20px
+    border-radius 100%
+    background dodgerblue
+    cursor pointer
+    -webkit-appearance none
+    margin-top -5px
+
+
+  &::-moz-range-thumb
+    height 20px
+    width 20px
+    border-radius 100%
+    background dodgerblue
+    cursor pointer
