--- a/src/404-particles/style.styl
+++ b/src/404-particles/style.styl
@@ -8,7 +8,7 @@ body
   min-height 100vh
   background linear-gradient(35deg, #a1eeeb 30%, #4331ec 85%)
   background linear-gradient(35deg, #f8d60f 20%, #fc5c5c 85%)
-  background linear-gradient(35deg, #04c4d4 20%, #fc5c5c 85%)
+  background linear-gradient(65deg, #fbdc14 20%, #04c4d4 20%, #04c4d4 65%, #fc5c5c 65%, #fc5c5c 85%)
 
 canvas
   height 30vh
