Update 404 particle styling

--- a/src/404-particles/style.styl
+++ b/src/404-particles/style.styl
@@ -26,12 +26,14 @@ canvas
   color #fafafa
   display flex
   height 100vh
+  width 100vw
+  position absolute
   justify-content center
   z-index 2
 
   h1
     font-size 4rem
-    text-shadow 5px 5px 15px #000
+    text-shadow 10px 10px 5px rgba(0, 0, 0, 0.5)
 
     @media(min-width 768px)
       font-size 10rem
